--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -12,7 +12,7 @@
 
     // Some data we can work with
 
-    const inventors = [
+    const inventors = [ // each element in this array is an object. each object has 4 members. 
       { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
       { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
       { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
@@ -27,7 +27,7 @@
       { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
     ];
 
-    const people = [
+    const people = [ // each element in this array is a string. 
       'Bernhard, Sandra', 'Bethea, Erin', 'Becker, Carl', 'Bentsen, Lloyd', 'Beckett, Samuel', 'Blake, William', 'Berger, Ric', 'Beddoes, Mick', 'Beethoven, Ludwig',
       'Belloc, Hilaire', 'Begin, Menachem', 'Bellow, Saul', 'Benchley, Robert', 'Blair, Robert', 'Benenson, Peter', 'Benjamin, Walter', 'Berlin, Irving',
       'Benn, Tony', 'Benson, Leana', 'Bent, Silas', 'Berle, Milton', 'Berry, Halle', 'Biko, Steve', 'Beck, Glenn', 'Bergman, Ingmar', 'Black, Elk', 'Berio, Luciano',
@@ -37,6 +37,26 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+
+    const fifteen = inventors.filter(function(anything) {  // inventors.filter is the inventors array using the filter method. 
+      // inside the filter() is a function instead of a param/var. this function will loop through the entire array. and the function
+      // receives (anything). you can name this whatever you want, in the video he names it inventor. that (anything) is each element
+      // in the inventors array. and for each element, we can then decide if we want to keep it or not
+      if (anything.year >= 1500 && anything.year <= 1599) { // check if each element's year is in the 1500s
+        return true; // keep it if 1500s
+      } // else {  // you don't need the else. bc for those that don't match the if part, it will be discarded
+        // return false; // don't keep it if not 1500s
+      // }
+      
+    });
+
+    console.log(fifteen); // show the results but it is in a collapsible format which you have to click to show more details
+    console.table(fifteen); // show in a table. easier to read
+
+    // line 41, you can do an arrow function. it will look like this: inventors.filter(anything => {
+        // the if statement
+    // });
+
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
