--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -87,9 +87,9 @@
     // the way sort works is you get two items and you sort just those two items. it will look at person A and B. if A is older, then
     // it puts A on top. and it returns a 1 and -1. then it will bubble these items up and down in the array.
 
-    const ordered = inventors.sort(function(a, b){ // const ordered holds the results of the sort method. the sort method is using 
-      // a function as a param/var. the two params are a and b which represent person A and person B.
-      if (a.year > b.year) { // if person A is born before person B, then it returns a 1. if false, then returns a -1.
+    const ordered = inventors.sort(function(firstPerson, secondPerson){ // const ordered holds the results of the sort method. 
+      //it is using a function as a param/var. the two params are person A and B
+      if (firstPerson.year > secondPerson.year) { // if person A is born before person B, then it returns a 1. if false, then returns a -1.
         return 1;
       } else {
         return -1;
@@ -102,8 +102,49 @@
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    
+    // a reduce is a cleaner way to do the loop below. this is an ex of a common loop on an array
+
+    let totalYears = 0;
+    for(let i = 0; i < inventors.length; i++) {
+      console.log(inventors[i].year); // it prints out from oldest year to highest year instead of the order of the array
+      totalYears += inventors[i].year;
+    }
+    // this will go through the inventors array and print each year as it iterates through the loop. it also accumulates the 
+    // years as a sum. then after the loop is done, it will print the sum
+    console.log(totalYears);
+
+    // reduce will give you a running total or what you've returned from this function last time. he names that total. and he also
+    // wants to get the inventor so he names the second param/var as inventor
+    const totalYearsReduce = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year); // return total is what the total is after it goes thru all the items/elements.
+      // reduce is similar to map, ordered, filtered in that it will loop through each element/item of the array. it won't skip any.
+      // (inventor.passed - inventor.year) is the years lived for each inventor. then it will sum all the years
+    }, 0); 
+
+    console.log(totalYearsReduce); 
+    
+    // at line 123, it used to look like this: }); which is the usual way to end an arrow function. but that will give you in the 
+    // console.log [object Object]7859843780508967907681. this is unusual bc the first time around the loop, the total
+    // is undefined. to fix it, he goes to the end of the arrow function and makes it look like this: }, 0);
+    // that fixes it bc it defines total with 0 and then the loop fills in the total correctly.
 
     // 5. Sort the inventors by years lived
+
+    // this sort is very similar to the sort at line 90. instead of just comparing year, we are comparing the years lived
+    // which is passed minus year. 
+    const oldest = inventors.sort(function(firstPerson, secondPerson){
+      const firstPersonYearsLived = firstPerson.passed - firstPerson.year;
+      const secondPersonYearsLived = secondPerson.passed - secondPerson.year;
+      if (firstPersonYearsLived > secondPersonYearsLived) {
+        return -1;  // last sort on line 90 had 1 and then -1. which is ascending order, lowest to highest. this one has 
+        // -1 and then 1 which is descending order, highest to lowest.
+      } else {
+        return 1;
+      }
+    });
+
+    console.table(oldest);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
