--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -177,9 +177,18 @@
     // the reduce ex in his video is very close to the example paragraph on "How reduce works with an initial value". 
     
     // [15, 16, 17, 18, 19].reduce(
-    //   (previousValue, currentValue) => previousValue + currentValue, 
-    //   10,
-    // ); // this in a single line: reduce((previousValue, currentValue) => { /* … */ } , initialValue)
+    //   (accumulator, currentValue) => accumulator + currentValue, 
+    //   10
+    // ); // this in a single line: reduce((accumulator, currentValue) => { /* … */ } , initialValue)
+
+    // what this looks like is it starts with 10 which is the initial value for the accumulator. then it takes the first item of the
+    // array which is 15. it adds this to the accumulator. now the accumulator is 25. then it adds the next item in the array to the
+    // accumulator. now it is 41. it does this to each item in the array until it reaches the end. then it returns the accumulator
+    // with the total value of all the items plus the initial value of the accumulator
+
+    // think of reduce as taking each element in your array and returning a single value. often reduce is used to accumulate the values
+    // of the array. but you can do more than just accumulate. his ex takes each elements birth year and passing year and does 
+    // some math on it. then the results of that math are accumulated.
     
     // 5. Sort the inventors by years lived
 
@@ -386,13 +395,13 @@
     const transportationFillObjects = data.reduce(function(objectToCount, itemInArray) {
       if (!objectToCount[itemInArray]) { // since we won't know which objects exist, this line checks for the opposite of it
       // existing. if it doesn't exist, then it sets the new object it just found equal to zero which will fill our formerly 
-      // blank object with something in line 395
+      // blank object with something in line 404
         objectToCount[itemInArray] = 0;
       }
 
       objectToCount[itemInArray]++; // now that it has found objects, it will increment the count by 1. 
       return objectToCount; // this will return a list of objects with their counts to the const transportationFillObjects
-    }, { }); // start with the blank object. and will fill up with new objects it finds. also line 393 increments each object count 
+    }, { }); // start with the blank object. and will fill up with new objects it finds. also line 402 increments each object count 
     // by 1
 
     console.log(transportationFillObjects); // this will show the object with each item and the count of each item
@@ -404,7 +413,7 @@
     // if (!objectToCount[itemInArray]) to give it a value of 0 for those that don't exist. and now that the empty object 
     // has something in it, we can increment it with each instance from our array
 
-    // first start with a blank object. that is line 395. then each iteration of the loop, see if there is an entry for that. and 
+    // first start with a blank object. that is line 404. then each iteration of the loop, see if there is an entry for that. and 
     // if not, then we need to make an entry and give it zero. then increment the count of it, so now that it exists in our formerly 
     // blank object. and this will keep going through the array until it reaches the end. 
 
