--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -85,7 +85,11 @@
     const comment = comments.find(function(videoUsesComment){  // he uses comment as the element name in the function. you can 
       // name this anything. in your case, it is videoUsesComment.
       if (videoUsesComment.id === 823423) {
-        return true;
+        return true; // here you use return true just like the .some and .every ex's. but when you console.log this, it won't show 
+        // true or false, but it will show the element that it found. this is more helpful bc you can then take that value and 
+        // use it elsewhere in your code. but for things that only return true or false, those can't really be used for other 
+        // values in your code but the true/false can still be useful to either start another process or to prevent another 
+        // process from going since you can make your code continue if something is true or to stop when something is false
       }
     });
 
@@ -108,7 +112,11 @@
 
     const index = comments.findIndex(function(videoUsesComment) {
       if (videoUsesComment.id === 823423) {
-        return true;
+        return true; // here you use return true just like the .some and .every ex's. but when you console.log this, it won't show 
+        // true or false, but it will show the index that it found. this is more helpful bc you can then take that value and 
+        // use it elsewhere in your code. but for things that only return true or false, those can't really be used for other 
+        // values in your code but the true/false can still be useful to either start another process or to prevent another 
+        // process from going since you can make your code continue if something is true or to stop when something is false
       }
     });
 
@@ -132,6 +140,52 @@
     // array shows 4 items and it still counts 0, 1, 2, 3. we removed item 1 which was text: Super good, id: 823423. now that it is
     // gone, the new number 1 is text: 'You are the best', id: 2039842. this new number 1 used to be number 2 and bc of the splice,
     // everything shifted over one position.
+
+    // for lines 113 to 137, that takes the original array and removes an item and then shows the original array again but now
+    // the array has one less item. it is using splice.
+
+    // the below is adding a new step where you have your original array and when you remove the item, you will get another 
+    // array that doesn't include the item that was removed. this way you can refer to the original array and the new array. 
+    // the below is using slice instead of splice. also notice the ... which is spread syntax
+
+    const commentsUsingSpread = [
+      { text: 'Love this!', id: 523423 },
+      { text: 'Super good', id: 823423 },
+      { text: 'You are the best', id: 2039842 },
+      { text: 'Ramen is my fav food ever', id: 123523 },
+      { text: 'Nice Nice Nice!', id: 542328 }
+    ];
+
+    const indexSpread = commentsUsingSpread.findIndex(function(videoUsesComment) {
+      if (videoUsesComment.id === 823423) {
+        return true;
+      }
+    });
+
+    console.log(indexSpread);
+
+    console.table(commentsUsingSpread);
+
+    // commentsUsingSpread.splice(indexSpread, 1);
+
+    // console.table(commentsUsingSpread);
+
+    const newCommentsUsingSpread = [  // uses slice instead of splice. and also uses spread syntax bc you need each item that
+    // you sliced to become an array item
+      ...commentsUsingSpread.slice(0, indexSpread), // slice has start and end. but the end is not included in the slice.
+      // the slice(0, indexSpread) will start at 0 which is the first item. and go up to indexSpread which is 1 but not include 
+      // 1. the end result is just the 0
+      ...commentsUsingSpread.slice(indexSpread + 1) // here there is no end which means it starts at the indexSpread of 1 + 1 
+      // which is 2. and bc there is no end, it goes all the way to the length of the array. so the result is from index 2 to 
+      // the end of the array
+    ];
+
+    // the two parts above will take the original array of 0, 1, 2, 3, 4 and create a new array using these index numbers from the 
+    // original array: 0, 2, 3, 4. 
+    console.table(newCommentsUsingSpread);
+
+
+    
 
   </script>
 </body>
